feat: add dump info
