# src/Heartbeat/Controllers/Models.cs
@@ -1,8 +1,20 @@
 using Microsoft.Diagnostics.Runtime;
 
+using System.Runtime.InteropServices;
+
 namespace Heartbeat.Host.Controllers;
 
 // ReSharper disable NotAccessedPositionalProperty.Global
+public record DumpInfo(
+    string DumpPath,
+    bool CanWalkHeap,
+    bool IsServerHeap,
+    string ClrModulePath,
+    Architecture Architecture,
+    int ProcessId,
+    string Platform,
+    string RuntimeVersion);
+
 public record ObjectTypeStatistics(ulong MethodTable, string TypeName, ulong TotalSize, int InstanceCount);
 
 public record GetObjectInstancesResult(
